# scrubdata-hackathon

./: .gitignore  PRODUCT.md  README.md  TRANSFER.md  app.py  pyproject.toml  requirements.txt  server.py
docs/: DATASETS.md  DEGENERATE_BASELINES.md  FIELD_NOTES.md  GITTABLES_AUDIT.md  PAIRED_BENCH.md  PAPER.md  SCALING_ARM.md  TOOL_REFERENCE.md  WILD_BENCH.md
eval/: README.md  __init__.py  ablations.py  baselines_learned.py  calibration.py  capture_plan_local.py  contamination_probe.py  cross_scoring.py  degenerate.py  diagnose_model.py  equivalence.py  generalization.py  gittables_audit.py  gold.jsonl  gold.py  inject.py  inject_validity.py  label_curve.py  metrics.py  minicpm_check.py  paired_bench.py  pii_leak.py  pii_slice.py  plot_precision_curve.py  precision_curve.py  radar_bench.py  raha_table.py  run_baran.py  run_eval.py  run_finetuned.py  run_model.py  run_real.py  run_real_multi.py  sc_rerank.py  scaling_arm.py  verify_scaling_coincidence.py  wild_bench.py
frontend/: index.html
notebooks/: MODEL_CARD.md  Modelfile  README.md  train_colab.ipynb  train_qlora.py
samples/: dirty_contacts.csv  hr_payroll.csv  make_maria_crm.py  make_sample.py  maria_crm_export.NOTES.md  maria_crm_export.csv
scripts/: modal_debug_v5.py  modal_eval.py  modal_eval_suite.py  modal_eval_v5.py  modal_export_gguf.py  modal_grpo.py  modal_jellyfish.py  modal_serve.py  modal_train.py  modal_warm.py  pii_transfer_check.py  publish_traces.py  push_dataset.py
scrubdata/: __init__.py  active.py  baselines.py  cli.py  detect.py  executor.py  grounded.py  model_planner.py  pii.py  (+9 more)
(+142 files in other folders)
